# pr_robotics

./: Dockerfile  Notes on code.docx  Pain.docx  Pain.txt  README.md  controll_class.py  docker-compose.yaml  extracting_trajectories.py  ros_noetic_with_robotis  transforming_trajectories.py
pr_robotics/: CMakeLists.txt  package.xml
pr_robotics/launch/: gazebo.launch
pr_robotics/scripts/: Kinematic_save.py  Kinematics.py  Linien.dxf  Not_so_much_pain_afterall.dxf  Pain.dxf  circles_1.dxf  controll_class.py  dxf_reader_node.py  extract_traj.py  find_workspace.py  kinmatics_sim.py  ros_publisher_node.py  sim_ik_easy.py  sim_pinochio.py  simple_ik.py  user_interface.py
pr_robotics/scripts/urdf/: controllers.yaml  robot.sdf  robot.slx.autosave  robot.urdf
pr_robotics/scripts/urdf/meshes/: base_link.STL  link1.STL  link2.STL  z_link.STL
pr_robotics_msgs/: CMakeLists.txt  package.xml
pr_robotics_msgs/msg/: Trajectory2D.msg
pr_robotics_msgs/src/: ik_solver_node.py  robot_controller_node.py
