<?xml version="1.0"?>
<package format="2">
  <name>pr_robotics_msgs</name>
  <version>0.0.0</version>
  <description>The pr_robotics_msgs package for custom robot messages</description>

  <maintainer email="root@todo.todo">root</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <export>
    <message_generation></message_generation>
  </export>
</package>